@@ -1,7 +1,6 @@
 <table cellspacing="1px" class="outer">
   <{foreach item=user from=$block.users}>
   <tr class="<{cycle values="even,odd"}>" valign="middle">
-    <td><{$user.rank}></td>
     <td align="center">
       <{if $user.avatar != ""}>
       <img src="<{$user.avatar}>" alt="<{$user.name}>'s avatar" width="32px" /><br />
